Refactor code for improved readability and consistency in CategoryView, MainApplication, MainChartView, ProcessDetailView, ProcessScannerService, and ProcessScanTask